syntax = "proto3";

package social.v1;
option go_package = "github.com/pwm/protos/compiled/go/social/v1;social_v1";

service SocialService {
    rpc GetOnlinePlayers(GetOnlinePlayersRequest) returns (GetOnlinePlayersResponse);
    rpc GetServerPlayers(GetServerPlayersRequest) returns (GetServerPlayersResponse);
}

message Player {
    string name = 1;
    string uid = 2;
    string steam_id = 3;
}

message GetOnlinePlayersRequest {
}
message GetOnlinePlayersResponse {
    repeated Player players = 1;
}

message GetServerPlayersRequest {}
message GetServerPlayersResponse {
    repeated Player players = 1;
}

