package grpc_social_v1

import (
	"context"

	"github.com/bitcrshr/pwm/protos/compiled/go/social_v1"
)

func (s *server) GetOnlinePlayers(ctx context.Context, req *social_v1.GetOnlinePlayersRequest) (*social_v1.GetOnlinePlayersResponse, error) {
	return nil, nil
}

func (s *server) GetServerPlayers(ctx context.Context, req *social_v1.GetServerPlayersRequest) (*social_v1.GetServerPlayersResponse, error) {
	return nil, nil
}
